tests/miniJava/pos/001079_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( true ) if ( 0 ) { } else { } else if ( 0 ) { } else { } } }
