tests/miniJava/neg/006521_mutation.MiniJava
class java { public static void Main ( String [ ] if java ) { { } } }
